[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dateutilx"
dynamic = ["version"]
description = "Modern extension to the standard Python datetime module"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [{ name = "Gustavo Niemeyer", email = "gustavo@niemeyer.net" }]
maintainers = [{ name = "Rishabh B" }]

requires-python = ">=3.10"
keywords = ["date", "time", "datetime", "timezone", "dateutil"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries",
]

dependencies = ["tzdata; sys_platform == 'win32'"]

[project.optional-dependencies]
lint = ["pre-commit", "pylint"]
test = ["hypothesis", "pytest", "pytest-cov"]

[project.urls]
Homepage      = "https://github.com/rsb-23/dateutilx"
Documentation = "https://dateutil.readthedocs.io/en/stable/"
Source        = "https://github.com/rsb-23/dateutilx"

# Build Config
[tool.hatch.version]
source = "vcs"
[tool.hatch.build.targets.sdist]
include = ["src/dateutilx","src/dateutil", "LICENSE", "README.md", "pyproject.toml"]
[tool.hatch.build.targets.wheel]
packages = ["src/dateutilx","src/dateutil"]

# Tool Config
[tool.black]
target-version = ["py311", "py312", "py313", "py314"]
line-length = 120
skip-magic-trailing-comma = true

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv"]
per-file-ignores = ["*/__init__.py: F401"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
split_on_trailing_comma = false

[tool.coverage.report]
fail_under = 85.0
[tool.coverage.run]
source = ["src/"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "*_solution.py", ]
xfail_strict = true
filterwarnings = ["error", "error::DeprecationWarning", "error::PendingDeprecationWarning", ]
markers = [
    "gettz", "import_star", "isoparser", "parserinfo", "rrule", "rruleset", "rrulestr",
    "smoke", "tz_resolve_imaginary", "tzfile", "tzlocal", "tzoffset", "tzstr",
]
