[build-system]
requires = ["setuptools", "setuptools_scm<8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dateutil"
dynamic = ["version"]
description = "Modern extension to the standard Python datetime module"
readme = "README.rst"

requires-python = ">=3.10"
dependencies = ["tzdata; sys_platform == 'win32'"]

[project.optional-dependencies]
lint = ["pre-commit", "pylint"]
test = ["hypothesis", "pytest", "pytest-cov"]

[tool.towncrier]
package = "dateutil"
package_dir = "dateutil"
filename = "NEWS"
directory = "changelog.d"
title_format = "Version {version} ({project_date})"
issue_format = "GH #{issue}"
template = "changelog.d/template.rst"

[[tool.towncrier.type]]
directory = "data"
name = "Data updates"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecations"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation changes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true

[tool.coverage.report]
fail_under = 85.0
[tool.coverage.run]
source = ["src/"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "*_solution.py", ]
xfail_strict = true
filterwarnings = ["error", "error::DeprecationWarning", "error::PendingDeprecationWarning", ]
markers = [
    "gettz", "import_star", "isoparser", "parserinfo", "rrule", "rruleset", "rrulestr",
    "smoke", "tz_resolve_imaginary", "tzfile", "tzlocal", "tzoffset", "tzstr",
]
