[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dateutilx"
dynamic = ["version"]
description = "Modern extension to the standard Python datetime module"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rishabh B" }]

keywords = ["date", "time", "datetime", "timezone", "dateutil"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries",
]

requires-python = ">=3.11"
dependencies = ["tzdata; sys_platform == 'win32'"]

[dependency-groups]
build = ["build", "twine"]
lint = ["pre-commit"]
test = ["hypothesis", "pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/rsb-23/dateutilx"
Documentation = "https://dateutilx.readthedocs.io/en/stable/"
Source = "https://github.com/rsb-23/dateutilx"

# Build Config
[tool.hatch.version]
source = "vcs"
[tool.hatch.build.targets.sdist]
include = ["src/dateutilx", "src/dateutil", "LICENSE", "README.md", "pyproject.toml"]
[tool.hatch.build.targets.wheel]
packages = ["src/dateutilx", "src/dateutil"]

[tool.coverage.report]
fail_under = 85.0
[tool.coverage.run]
source = ["src/"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "*_solution.py", ]
xfail_strict = true
filterwarnings = ["error", "error::DeprecationWarning", "error::PendingDeprecationWarning", ]
markers = [
    "gettz", "import_star", "isoparser", "parserinfo", "rrule", "rruleset", "rrulestr",
    "smoke", "tz_resolve_imaginary", "tzfile", "tzlocal", "tzoffset", "tzstr",
]
